# genotools-server

./: .gitignore  CLAUDE.md  README.md  apps-argo-cd.yaml  argo-dev.yaml  argo-prod.yaml  argo-staging.yaml  cloudbuild.yaml  workflow-argo-cd.yaml  working-cloudbuild.yaml
apps/genotracker/: app.py  requirements.txt
apps/gke-manager/: Dockerfile  api_req.py  app.py  app_orig.py
apps/gke-manager-old/: api_req.py  app.py
apps/gp2-browser/: Dockerfile
apps/precision_med/: .gitignore  README.md  main.py  precision_med_recruitment.py  project_plan.md  requirements.txt  run_app.sh  run_frontend.sh  setup.sh  streamlit_app.py  test_repositories.py  testing.py
deploy/gp2-browser/: gp2-browser-add-node-pool.sh  gp2-browser-delete-node-pool.sh  gp2-browser-deployment.sh
microservices/browser_api/: Dockerfile  README.md  main.py  run_browser_prep.py
microservices/carriers_api/: README.md  main.py  main_refactored.py  precision_med_recruitment.py  run_carriers.py  (+4 more)
microservices/imputation_harmonizer/: .gitignore  CLAUDE.md  HRC-1000G-check-bim-v4.2.pl  PIPELINE_REFACTOR_NOTES.md  imputation-harmonizer-project-plan.md  pyproject.toml
microservices/imputation_harmonizer/imputation_harmonizer/: __init__.py  __main__.py  cli.py  config.py  format_detection.py  io_utils.py  main.py  models.py  plink_runner.py  utils.py
microservices/imputation_harmonizer/imputation_harmonizer/checks/: __init__.py  comparator.py  strand.py
microservices/imputation_harmonizer/imputation_harmonizer/parsers/: __init__.py  afreq.py  bim.py  frq.py  pvar.py
microservices/imputation_harmonizer/imputation_harmonizer/reference/: __init__.py  base.py  hrc.py  kg.py  topmed.py
microservices/imputation_harmonizer/imputation_harmonizer/writers/: __init__.py  log.py  plink_files.py  report.py  shell_script.py
microservices/imputation_harmonizer/tests/: __init__.py  conftest.py  test_format_detection.py  test_integration.py  test_io_utils.py  test_parsers.py  test_plink2_parsers.py  test_plink_runner.py  test_reference.py  test_strand.py  test_topmed.py  test_utils.py
microservices/imputation_harmonizer/tests/fixtures/: mini_1000g.legend  mini_hrc.tab  sample.bim  sample.frq
(+305 files in other folders)
